add to github pages

--- a/hello.html
+++ b/hello.html
@@ -5,7 +5,8 @@
     <title>Not My Webpage!</title>
   </head>
   <body>
-    Hello, world! Hello third time
+    <h1>Hello World</h1>
+    Hi, this is git hub pages
     change my name
   </body>
 </html>
