--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <title>Testing Git Branching</title>
   </head>
   <body>
-    Testing Git Branching
-    I am now on branch 1
+    I am Master Branch <3 <3
   </body>
 </html>
